feat: add firebase as dependency